FIX:		Fixed to ChibiOS realloc on a TextEdit control
FEATURE:	Added support for CMSIS V2.0 operating systems (eg RTX5)
REMOVED:	Removed long deprecated functions gfxSemCounter() and gfxSemCounterI()
FIX:		gwinDetachToggle() is now a visible part of the API
CHANGE:		Update OSX makefiles (allows for 64bit building)
FIX:		Fixed resetting a timer on gwinImage objects when using animated GIFs


*** Release 2.7 ***
FEATURE:	Added EXC7200 driver
FEATURE:	Added STM32F439i-EVAL board files
FIX:		Fixed crash when passing NULL to gwinSetStyle()
FIX:		Fixed potential crash when GDISP_NEED_TEXT_WORDWRAP is turned on
FEATURE:	Added SDL driver
FEATURE:	Added ILI9225 driver
FEATURE:	Added ST7735 driver
FEATURE:	Added Linux event input driver
FIX:		Fixed an issue with color formats in Linux-Framebuffer board files
FIX:		Fixed and improving arc rendering functions
FIX:		Preventing possible crash when no valid GWIN default font has been set
FIX:		Updating Windows binaries of the font encoder to improve compatibility
FIX:		Fixed progressbar bounds checking and decrementing
FEATURE:	Added gdispFillDualCircle()
FIX:		Fixed an issue in the filled polygon drawing function which caused irregularities
FEATURE:	Added high-level functions to modify image color palettes
FIX:		Improving gdispDrawThickLine()
FEATURE:	Added gdispAddFont() for adding a dynamic font to the permanent font list
FEATURE:	Added gmiscHittestPoly() for checking whether a point is inside of a polygon
FIX:		Fixed strange multi-thread issues in GEVENT
FEATURE:	Added ILI9488 driver
FEATURE:	Added the ability to display the detected compiler
FIX:		Fixed an illegal instruction in the Cortex M0 task switcher
FEATURE:	Added RAW32 task switching functions which work with ARMCC (the compiler used by Keil) for Cortex M0,M1,M3,M4 and M7
FEATURE:	Added gdispGDrawThickArc()
FIX:		Fixed a memory merging issue with the RAW32 memory allocator
FIX:		Update RAW32 libc threads support for more recent versions of the MinGW compiler

