@@ -47,6 +47,7 @@ REMOVED:	Removed long deprecated functions gfxSemCounter() and gfxSemCounterI()
 FIX:		gwinDetachToggle() is now a visible part of the API
 CHANGE:		Update OSX makefiles (allows for 64bit building)
 FIX:		Fixed resetting a timer on gwinImage objects when using animated GIFs
+FEATURE:	Added gwinTextEditSendKey() and gwinTextEditSendSpecialKey()
 
 
 *** Release 2.7 ***
